@@ -6,7 +6,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -25,6 +24,6 @@ public class HeroeMapper {
     public List<HeroeDto> toHeroeDtoList(List<Heroe> heroes) {
         return heroes.stream()
                 .map(this::toHeroeDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
